예약페이지 및 객실 이미지 경로 변경 및 sql 체키아웃 추가 마이페이지 수정

--- a/project/src/main/resources/static/css/reservation-detail.css
+++ b/project/src/main/resources/static/css/reservation-detail.css
@@ -192,7 +192,9 @@
     background:white;
     color:#CC9966;
     text-align:center;
+    border: 1px solid;
     border-radius:10px;
+    border-color: white;
     font-weight:700;
     text-decoration:none;
     transition:.25s;
