--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -1,16 +1,18 @@
-<!-- 프래그먼트 : 레이아웃에서 공통적으로 사용할 UI -->
-<!-- th:fragment="프래그먼트 명" -->
+<!-- fragments/header-footer.html -->
+<!-- 공통 헤더 & 푸터 프래그먼트 -->
+
+<!-- 헤더 -->
 <th:block th:fragment="header">
     <header>
         <a th:href="@{/}">
-            <img th:src="@{/img/logo.png}">
+            <img th:src="@{/img/logo.png}" alt="로고">
         </a>
         
         <ul>
-            <li><a href="/pet/reservation">예약</a></li>
-            <li><a href="/공지사항">공지사항</a></li>
-            <li><a href="/서비스">서비스</a></li>
-            <li><a href="/소개">소개</a></li>
+            <li><a th:href="@{/pet/reservation}" th:attr="data-login=${isLogin}">예약</a></li>
+            <li><a th:href="@{/공지사항}">공지사항</a></li>
+            <li><a th:href="@{/서비스}">서비스</a></li>
+            <li><a th:href="@{/소개}">소개</a></li>
         </ul>
 
         <ul>
@@ -23,7 +25,7 @@
             </li>
 
             <!-- 로그인 -->
-             <li class="login" sec:authorize="hasRole('ADMIN')">
+            <li class="login" sec:authorize="hasRole('ADMIN')">
                 <a href="/admin">관리자 페이지</a>
             </li>
             <li class="login" sec:authorize="isAuthenticated()">
@@ -31,29 +33,26 @@
             </li>
             <li class="login" sec:authorize="isAuthenticated()">
                 <a href="#" id="logoutLink">로그아웃</a>
-
                 <form id="logoutForm" action="/logout" method="post" style="display:none">
-                    <input type="hidden"
-                        th:name="${_csrf.parameterName}"
-                        th:value="${_csrf.token}">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                 </form>
             </li>
-
-            <script>
-            document.addEventListener('DOMContentLoaded', () => {
-                const link = document.getElementById('logoutLink');
-                if (link) {
-                    link.addEventListener('click', e => {
-                        e.preventDefault();
-                        document.getElementById('logoutForm').submit();
-                    });
-                }
-            });
-            </script>
         </ul>
-    
-        
 
     </header>
+    <script th:inline="javascript">
+/*<![CDATA[*/
+document.addEventListener('DOMContentLoaded', function() {
+    // 로그아웃
+    const logoutLink = document.getElementById('logoutLink');
+    if (logoutLink) {
+        logoutLink.addEventListener('click', function(e) {
+            e.preventDefault();
+            document.getElementById('logoutForm').submit();
+        });
+    }
+});
+/*]]>*/
+</script>
 
 </th:block>
