--- a/project/src/main/resources/templates/admin/ad_roomupdate.html
+++ b/project/src/main/resources/templates/admin/ad_roomupdate.html
@@ -162,10 +162,10 @@ document.getElementById("updateForm").addEventListener("submit", async function(
 		    });
 		
 		    if (response.ok) {
-          alert("게시글이 삭제되었습니다.");
+          alert("객실이 삭제되었습니다.");
           location.href = "/admin/service";
         } else {
-          alert("게시글 삭제에 실패하였습니다.")
+          alert("객실 삭제에 실패하였습니다.")
         }
 		
 		  } catch (err) {
