공지사항 작성 수정 삭제 추가

--- a/project/src/main/resources/templates/notice/notice_update.html
+++ b/project/src/main/resources/templates/notice/notice_update.html
@@ -61,7 +61,7 @@
                     <!-- 버튼 영역 -->
                 <div class="d-flex justify-content-between">
                     <!-- 왼쪽 -->
-                    <a href="/noticedetail" class="btn btn-outline-secondary">
+                    <a href="/noticelist" class="btn btn-outline-secondary">
                         취소
                     </a>
 
