--- a/project/src/main/resources/templates/fragments/header.html
+++ b/project/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
         <ul>
             <li><a href="/pet/reservation">예약</a></li>
             <li><a href="/noticelist">공지사항</a></li>
-            <li><a href="/서비스">서비스</a></li>
+            <li><a href="/service">서비스</a></li>
             <li><a href="/소개">소개</a></li>
         </ul>
 
